# tci_quad

./: #compile.sh#  .gitignore  .gitmodules  CMakeLists.txt  compile.sh  install_extern.sh  lazymat.h  main.cpp  mindex.h  pimat.h  prrrlu.h  tci_quad_instantiations_float128.cpp  tensorcross.h  tensortrain.h
include/: data_for_plot.h  error_calc.h  grid.h  grid_alias.h  int128.h  mindex.h  output_tci.h  pimat.h  prrrlu.h  runner.h  tensorcross.h  tensortrain.h  tt_sav_load.h  tt_save_load.h
python_plotting/: plot_all_gE.py  plotting_error.py
src/: main.cpp  tci_quad_instantiations_float128.cpp
test/: test_grid.cpp  test_out.tt  test_tci.cpp
